fixed some line spacing and added coding competitions

--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -45,7 +45,7 @@
 
 .greeting-text-p {
   font-size: 40px;
-  line-height: 40px;
+  line-height: normal;
   margin-right: 40px;
   font-family: "Google Sans Medium";
 }
