--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -44,6 +44,7 @@
   font-family: "Google Sans Regular";
   text-align: center;
   margin-bottom: 10px;
+  line-height: normal;
 }
 
 .experience-header-detail-text {
